--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -14,7 +14,8 @@
             "screen"
           ]
         }
-      ]
+      ],
+      "no-descending-specificity": null
     },
     "csstree/validator": true,
     "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css"]
